--- a/vendor.conf
+++ b/vendor.conf
@@ -1,12 +1,30 @@
-github.com/prometheus/client_golang 94ff84a9a6ebb5e6eb9172897c221a64df3443bc
+github.com/gorilla/mux ac112f7d75a0714af1bd86ab17749b31f7809640
+github.com/gorilla/context 08b5f424b9271eedf6f9f0ce86cb9396ed337a42
+github.com/mholt/caddy e7f08bff38988c3049b7fda301c52a681af63cd8
 github.com/sirupsen/logrus 181d419aa9e2223811b824e8f0b4af96f9ba9302
 golang.org/x/crypto 558b6879de74bc843225cde5686419267ff707ca
 golang.org/x/sys 0f826bdd13b500be0f1d4004938ad978fcc6031e
-github.com/beorn7/perks 4c0e84591b9aa9e6dcfdf3e020114cd81f89d5f9
-github.com/golang/protobuf 748d386b5c1ea99658fd69fe9f03991ce86a90c1
-github.com/prometheus/client_model 6f3806018612930941127f2a7c6c453ba2c527d2
-github.com/prometheus/common 3e6a7635bac6573d43f49f97b47eb9bda195dba8
-github.com/prometheus/procfs e645f4e5aaa8506fc71d6edbc5c4ff02c04c46f2
-github.com/matttproud/golang_protobuf_extensions c12348ce28de40eed0136aa2b644d0ee0650e56c
+github.com/gorilla/websocket a69d9f6de432e2c6b296a947d8a5ee88f68522cf
+github.com/nu7hatch/gouuid 179d4d0c4d8d407a32af483c2354df1d2c91e6c3
+golang.org/x/net f5079bd7f6f74e23c4d65efa0f4ce14cbd6a3c0f
+golang.org/x/text 836efe42bb4aa16aaa17b9c155d8813d336ed720
+github.com/russross/blackfriday 4048872b16cc0fc2c5fd9eacf0ed2c2fedaa0c8c
+github.com/naoina/toml e6f5723bf2a66af014955e0888881314cf294129
+gopkg.in/yaml.v2 25c4ec802a7d637f88d584ab26798e94ad14c13b
+github.com/naoina/go-stringutil 6b638e95a32d0c1131db0e7fe83775cbea4a0d0b
+github.com/hashicorp/go-syslog b609c7d9de4658cded34a7336b90886c56f9dbdb
+github.com/lucas-clemente/quic-go 811315e31a0c190e7a9e86c84102e86c9ed2a072
+gopkg.in/natefinch/lumberjack.v2 a96e63847dc3c67d17befa69c303767e2f84e54f
+github.com/codahale/aesnicheck 349fcc471aaccc29cd074e1275f1a494323826cd
+github.com/xenolf/lego 4dde48a9b9916926a8dd4f69639c8dba40930355
+github.com/miekg/dns 0f3adef2e2201d72e50309a36fc99d8a9d1a4960
+gopkg.in/square/go-jose.v1 aa2e30fdd1fe9dd3394119af66451ae790d50e0d
+github.com/hashicorp/golang-lru 0a025b7e63adc15a622f29b0b2c4c3848243bbf6
+github.com/lucas-clemente/aes12 25700e67be5c860bcc999137275b9ef8b65932bd
+github.com/lucas-clemente/fnv128a 393af48d391698c6ae4219566bfbdfef67269997
+github.com/lucas-clemente/quic-go-certificates d2f86524cced5186554df90d92529757d22c1cb6
+github.com/dustin/go-humanize 259d2a102b871d17f30e3cd9881a642961a1e486
+github.com/jimstudt/http-authentication 3eca13d6893afd7ecabe15f4445f5d2872a1b012
+github.com/flynn/go-shlex 3f9db97f856818214da2e1057f8ad84803971cff
 github.com/BurntSushi/toml a368813c5e648fee92e5f6c30e3944ff9d5e8895
 github.com/codegangsta/cli 4b90d79a682b4bf685762c7452db20f2a676ecb2
